--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,14 +5,35 @@
 .vheight-100 {  
   padding-top: 80px;
   height: 91vh;
-  display: flex; 
-  width: 100%;
+
+  background-size: cover;
+  top:0;
   justify-content: center;
+  background-color: #a7d4be;
   
 }
 
 .pTag{
   display: inline;
   margin-left:8vh;
+}
+
+.login-border{
+    border: 3px solid #198754;
+    border-radius: 4%;
+    height: 70vh;
+    overflow: auto;
+    padding-top: 20px;
+    background-color: whitesmoke;
+}
+
+
+.home-border{
+  border: 3px solid #198754;
+  border-radius: 15px;
+  height: 40vh;
+  overflow: auto;
+  padding-top: 20px;
+  background-color: whitesmoke;
 }
 
