--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,32 +2,32 @@
   padding-top: 55px;
 }
 
-.vheight-100 {  
+.vheight-100 {
   padding-top: 50px;
   height: 91vh;
   background-size: cover;
-  top:0;
+  top: 0;
   justify-content: center;
   background-color: #a7d4be;
-  
+
 }
 
-.pTag{
+.pTag {
   display: inline;
-  margin-left:8vh;
+  margin-left: 8vh;
 }
 
-.login-border{
-    border: 3px solid #198754;
-    border-radius: 4%;
-    height: 70vh;
-    overflow: auto;
-    padding-top: 20px;
-    background-color: whitesmoke;
+.login-border {
+  border: 3px solid #198754;
+  border-radius: 4%;
+  height: 70vh;
+  overflow: auto;
+  padding-top: 20px;
+  background-color: whitesmoke;
 }
 
 
-.home-border{
+.home-border {
   border: 3px solid #198754;
   border-radius: 15px;
   height: 40vh;
@@ -36,16 +36,15 @@
   background-color: whitesmoke;
 }
 
-.client-border1{
+.client-border1 {
   border: 3px solid #198754;
   border-radius: 15px;
-  height: 15vh;
   overflow: auto;
   padding-top: 20px;
   background-color: whitesmoke;
 }
 
-.client-border2{
+.client-border2 {
   border: 3px solid #198754;
   border-radius: 15px;
   height: 40vh;
@@ -54,11 +53,41 @@
   background-color: whitesmoke;
 }
 
-.client-border3{
+.client-border3 {
   border: 3px solid #198754;
   border-radius: 15px;
   height: 64vh;
   overflow: auto;
   padding-top: 20px;
   background-color: whitesmoke;
+}
+
+.title {
+  padding-left: 30px !important;
+  padding-bottom: 15px;
+}
+
+.select,
+.queues-btn {
+  width: 100%;
+}
+
+.select-row {
+  padding-bottom: 15px;
+}
+
+.request-button {
+  width: 100%;
+  min-height: 60px;
+  margin-bottom: 20px;
+}
+
+.client-name {
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+
+.ticket-number {
+  font-size: 100px;
+  margin-bottom: 20px;
 }
